@@ -35,79 +35,15 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
-		<span><b>2019-10-05</b></span>
-		<div id="changelog20191005">
+		<span><b>2019-10-06</b></span>
+		<div id="changelog20191006">
 			<ul>
-				<li>Malaya Cards added.</li>
-				<li>Fixed ATK to now show for Imperal spear when adding spear mastery levels.</li>
+				<li>Added - Maylaya Cards.</li>
+				<li>Fixed - Imperial Spear add's 2 + atk per level of spear mastery now.</li>
+				<li>Added - Increases magical damage against bosstype monsters.</li>
 			</ul>
 		</div>
 		<br/>
-		<span><b>2018-07-29</b>[<a href="javascript: void(0)" onclick="Toogle('changelog20180630',this)">Show</a>]</span>
-			<div style="display: none" id="changelog20180729">
-					<ul>
-						<li>Added Eden/Mora/El Discates/Biolab Enchants;</li>
-						<li>Added Battleground Items;</li>
-						<li>Added Vanilla Flag;</li>
-						<li>Fixed many old items descriptions and status;</li>
-						<li>Added linking for card sets;</li>
-						<li>Fixed Def reduction while tanking more mobs;</li>
-					</ul>
-			</div>
-			<br>
-		<span><b>2018-06-30</b> [<a href="javascript: void(0)" onclick="Toogle('changelog20180630',this)">Show</a>]</span>
-			<div style="display: none" id="changelog20180630">
-					<ul>
-						<li>Added Malangdo Enchantable Weapons plus restrictions;</li>
-						<li>Added Items/Combo Link to the tRO's database;</li>
-						<li>Various items fix (stats, jobs and descriptions);</li>
-						<li>Fixed Brewing formula;</li>
-						<li>Fixed Baby jobs stats and rebirths;</li>
-						<li>Fixed Steel Body and Marionette Control;</li>
-					</ul>
-			</div>
-									<br />
-		<span><b>2018-06-08</b> [<a href="javascript: void(0)" onclick="Toogle('changelog20180608',this)">Show</a>]</span>
-		<div style="display: none" id="changelog20180608">
-						<ul>
-								<li><b>ITEMS</b>
-									<ul>
-										<li>All Aegir Items/Sets, Dropping Permeter, Hawk Eye, Eden Items, Pajamas Hats, Reforged Lord Kaho's Horns, Guillotine Katar, Burning Crown, Alchemy Glove, Ancient Dagger, Bunch of Carnations, Xmas Rudolph Santa Hat, Xmas Snowman Hat, Lude Mask, Maiden Hat, Staff of Thea, Advanced Items (Ex,: Fin Helm) and many others; [<a href="items-log.txt" target="_blank">FULL LIST</a>] </li>
-									</ul>
-							</li>
-						</ul>
-						<ul>
-							<li><b>CARDS</b>
-									<ul>
-										<li>Miming, Mini Octopus, Pom Spider, Wild Rider, Red Eruma, Siorava, Parus, Little Fatum, Detale;</li>
-									</ul>
-							</li>
-						</ul>
-						<ul>
-							<li><b>MONSTERS</b>
-									<ul>
-										<li>GMC Bosses, Valhalla Seals, Malangdo, Nightmare Pyramid, Spirit of Lord Kaho;</li>
-									</ul>
-							</li>
-						</ul>
-						<ul>
-							<li><b>EVOLVED/NEW PETS;</b></li>
-						</ul>
-						<ul>
-							<li><b>ITEMS FIX</b>
-									<ul>
-										<li>Deviruchi Headphones, Anubis Hat, Bayani Buwaya Skin Clothes, Sleipnir, Lacrima Stick, Chameleon Armor;</li>
-									</ul>
-							</li>
-						</ul>
-						<ul>
-							<li><b>ERRORS FIX</b>
-									<ul>
-										<li>Delay set to default, Mobdb Link, Set rates to 8, Added ItemID Display/Link</li>
-									</ul>
-							</li>
-						</ul>
-					</div>
 	</div>
 </div>
 
@@ -1263,7 +1199,7 @@
 		<div class="topic" align="right" style="margin-left: 6.5px"><div style="margin-right: 5px;line-height: 165%;">
 			Original simulator created by <a href="http://roratorio.2-d.jp/ro/">ROratorio</a><br />
 			Translated and adapted by <a href="http://rode.doddlercon.com/">Doddler</a><br />
-			Adjusted to TalonRO by [FlynnQ, Kato, ZoneSoldier, NattWara and Loa]
+			Adjusted to TalonRO by [FlynnQ, Kato, ZoneSoldier, NattWara and Loa, Hatfun]
 		</div>
 	</div>
 </div>
