@@ -579,10 +579,10 @@ cardOBJ = [
 ,[552,3,"Bakonawa","For Non-Monk classes, increase physical damage against Boss monsters by 15%.<br/>For Monk classes, increase physical damage against Boss monsters by 10%.",77,20,79,-35,0]
 ,[553,3,"Buwaya",0,77,20,79,-35,97,7,0]
 ,[554,2,"Bungisngis","For every refine after +5, MaxHP + 1%, MaxSP + 1%.",15,5,16,5,0]
-,[555,2,"Engkanto","Ignore 25% of Plant monster defense.",0]
-,[556,1,"Manananggal","20% more damage against Undead monsters with Heal.<br/>Receive 3% more healing when someone uses Heal or Sanctuary on you.",0]
+,[555,2,"Engkanto","Ignore 25% of Plant monster defense.",0,45,25,0]
+,[556,1,"Manananggal",0,93,20,92,3,94,3,0]
 ,[557,4,"Mangkukulam",0,16,10,0]
-,[558,2,"Tikbalang","MATK + 10.<br/><BR><b>*Warning*</b>MATK Bonus not implemented yet<b>*Warning*</b>Increases the damage of Wind property magical attacks on targets by 5%.<br/>[Refine Rate +7 or higher]<br/>Add another 5% damage with Wind Magic.<br/>[Refine Rate +9 or higher]<br/>Add another 5% damage with Wind Magic.",0]
+,[558,2,"Tikbalang","MATK + 10.<br/><BR><b>*Warning*</b>MATK Bonus not implemented yet<b>*Warning*</b><br>[Refine Rate +7 or higher]<br/>Add another 5% damage with Wind Magic.<br/>[Refine Rate +9 or higher]<br/>Add another 5% damage with Wind Magic.",344,5,0]
 ,[559,7,"Tiyanak",0,117,7,112,7,115,7,0]
 ,[560,5,"Wakwak","For every 10 Base STR, ATK + 5.",0]
 ,[561,5,"Jejeling","For every 10 Base VIT, HP + 200",0]
